<resources>
    <string name="app_name">TabKeeper</string>
    <string name="tipTextView">Enter tip %:</string>
    <string name="nameTextView">Payer</string>
    <string name="instructionsTextView">lorum ipsum</string>
    <string name="valueTextView">Value</string>
    <string name="tabTextView">Tab</string>
    <string name="tabTipTextView">Tab + tip</string>
    <string name="buttons">Enter</string>
    <string name="total">Total</string>
</resources>